neutron (2:9.0.0~rc1-2) UNRELEASED; urgency=medium

  [ Ondřej Nový ]
  * d/s/options: extend-diff-ignore of .gitreview
  * d/control: Use correct branch in Vcs-* fields

  [ Thomas Goirand ]
  * Build-Depends on openstack-pkg-tools >= 53~.
  * Fixed oslotest EPOCH.

 -- Thomas Goirand <zigo@debian.org>  Wed, 28 Sep 2016 10:01:19 +0200

neutron (2:9.0.0~rc1-1) experimental; urgency=medium

  * New upstream release.
  * Fixed (build-)depends for this release.
  * Using OpenStack's Gerrit as VCS URLs.
  * Rebased fix-requirements.txt.patch.
  * Re-enabled tests.
  * Add flake8-legacy.patch (idea taken from Ubuntu).

 -- Thomas Goirand <zigo@debian.org>  Fri, 16 Sep 2016 20:14:17 +0200

neutron (2:9.0.0~b2-1) experimental; urgency=medium

  * New upstream release.
  * Fixed (build-)depends for this release.
  * Activates qos policies by default.
  * neutron-server loads fwaas_driver.ini if it is present in /etc/neutron.
  * Refresh the core_plugin selection logic so it's up-to-date.
  * Updated Danish translation of debconf templates (Closes: #830637).

 -- Thomas Goirand <zigo@debian.org>  Fri, 15 Jul 2016 15:17:21 +0200

neutron (2:9.0.0~b1-1) experimental; urgency=medium

  * New upstream release.
  * Fix neutron-metadata server templates.
  * Fixed (build-)depends for this release.
  * Drop Return_oslo_config_Opts_to_config_generator.patch applied upstream.
  * Added fix-requirements.txt.patch.
  * Disable auto_clean as it requires a higher version of setuptools, which
    isn't in the sbuild host for Jessie.
  * Using ostestr directly, not using ./run_tests.sh anymore.

 -- Thomas Goirand <zigo@debian.org>  Thu, 09 Jun 2016 00:59:14 +0200

neutron (2:8.0.0-2) unstable; urgency=medium

  [ Ondřej Nový ]
  * Standards-Version is 3.9.8 now (no change)
  * d/copyright: Changed source URL to https protocol

  [ Thomas Goirand ]
  * Updated Portuguese translation for debconf messages (Closes: #821050).